5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1716_2505.log
== TEST (2019-05-14 16:36:55) 
-- CODE:
from math import*
x = eval(input("Digite: "))
k = int(input("Digite um valor: "))
contador = 1
sinal =-1 
resultado = x
exponente = 5
while ( contador < k  ):
	resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador += 1 
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
NameError: name 'expoente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:37:55) 
-- CODE:
from math import*
x = eval(input("Digite: "))
k = int(input("Digite um valor: "))
contador = 1
sinal =-1 
resultado = x
expoennte = 5
while ( contador < k  ):
	resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador += 1 
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
NameError: name 'expoente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:38:41) 
-- CODE:
from math import*
x = eval(input("Digite: "))
k = int(input("Digite um valor: "))
contador = 1
sinal =-1 
resultado = x
expoennte = 5
while ( contador < k  ):
	resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador += 1 
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
NameError: name 'expoente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:38:41) 
-- CODE:
from math import*
x = eval(input("Digite: "))
k = int(input("Digite um valor: "))
contador = 1
sinal =-1 
resultado = x
expoennte = 5
while ( contador < k  ):
	resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador += 1 
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
NameError: name 'expoente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:38:50) 
-- CODE:
from math import*
x = eval(input("Digite: "))
k = int(input("Digite um valor: "))
contador = 1
sinal =-1 
resultado = x
expoente = 5
while ( contador < k  ):
	resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador += 1 
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(soma,10))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:38:57) 
-- CODE:
from math import*
x = eval(input("Digite: "))
k = int(input("Digite um valor: "))
contador = 1
sinal =-1 
resultado = x
expoente = 5
while ( contador < k  ):
	resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador += 1 
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(soma,10))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:39:19) 
-- CODE:
from math import*
x = eval(input("Digite: "))
k = int(input("Digite um valor: "))
contador = 1
sinal =-1 
resultado = x
expoente = 5
while ( contador < k  ):
	resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador += 1 
print(round(resultado,10))

-- OUTPUT:
1.4956286123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:39:35) 
-- CODE:
from math import*
x = eval(input("Digite: "))
k = int(input("Digite um valor: "))
contador = 1
sinal =-1 
resultado = x
expoente = 5
while ( contador < k  ):
	resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador += 1 
print(round(resultado,10))

-- EXECUTION TIME:
0.213572
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.4956286123
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-1.4956250135
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1.0369770611
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:10) 
-- CODE:
from math import*
x = eval(input("Digite: "))
k = int(input("Digite um valor: "))
contador = 1
sinal =-1 
resultado = x
expoente = 3
while ( contador < k  ):
	resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador += 1 
print(round(resultado,10))

-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:17) 
-- CODE:
from math import*
x = eval(input("Digite: "))
k = int(input("Digite um valor: "))
contador = 1
sinal =-1 
resultado = x
expoente = 3
while ( contador < k  ):
	resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador += 1 
print(round(resultado,10))

-- EXECUTION TIME:
0.134959
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
